[gd_scene load_steps=11 format=3 uid="uid://ctaxqtng00gfv"]

[ext_resource type="Script" path="res://assets/scripts/setting.gd" id="1_3vlew"]
[ext_resource type="PackedScene" uid="uid://cokax3re70cxh" path="res://assets/scenes/chat_index.tscn" id="2_slp72"]
[ext_resource type="Script" path="res://assets/scripts/SafeMarginContainer.gd" id="3_3ta6s"]
[ext_resource type="FontFile" uid="uid://2acuf5q3heir" path="res://addons/fontawesome/fonts/fa-solid-900.woff2" id="3_x36t3"]
[ext_resource type="Script" path="res://addons/fontawesome/FontAwesome.gd" id="4_bbmxb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2pphe"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r6tib"]
content_margin_bottom = 4.0
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v0nev"]
bg_color = Color(0.431373, 0.431373, 0.431373, 1)
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8ig5n"]
bg_color = Color(0.584314, 0.698039, 0.686275, 1)
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_h2dmb"]

[node name="Setting" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_3vlew")
main = ExtResource("2_slp72")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.133333, 0.188235, 0.364706, 1)

[node name="SafeMarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_3ta6s")

[node name="VBoxContainer" type="VBoxContainer" parent="SafeMarginContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="SafeMarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_2pphe")
flat = true

[node name="FontAwesome" type="Label" parent="SafeMarginContainer/VBoxContainer/Button"]
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0
auto_translate = false
localize_numeral_system = false
theme_override_colors/font_color = Color(0.635294, 0.635294, 0.635294, 1)
theme_override_fonts/font = ExtResource("3_x36t3")
theme_override_font_sizes/font_size = 64
text = "ÔÅ†"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("4_bbmxb")
icon_size = 64
icon_name = "arrow-left"

[node name="Label" type="Label" parent="SafeMarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "API Key"

[node name="TextEdit" type="TextEdit" parent="SafeMarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 20
placeholder_text = "your chatgpt api key"

[node name="Go" type="Button" parent="SafeMarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_r6tib")
theme_override_styles/hover = SubResource("StyleBoxFlat_v0nev")
theme_override_styles/pressed = SubResource("StyleBoxFlat_8ig5n")
theme_override_styles/focus = SubResource("StyleBoxEmpty_h2dmb")
text = "save"

[node name="Go_to_SampleScene" type="Button" parent="SafeMarginContainer"]
custom_minimum_size = Vector2(300, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_r6tib")
theme_override_styles/hover = SubResource("StyleBoxFlat_v0nev")
theme_override_styles/pressed = SubResource("StyleBoxFlat_8ig5n")
theme_override_styles/focus = SubResource("StyleBoxEmpty_h2dmb")
text = "sample scene"

[connection signal="pressed" from="SafeMarginContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="SafeMarginContainer/VBoxContainer/Go" to="." method="_on_go_pressed"]
[connection signal="pressed" from="SafeMarginContainer/Go_to_SampleScene" to="." method="_on_go_to_sample_scene_pressed"]
